// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Soya Config should return raw config object 1`] = `
Object {
  "soya": Object {
    "config": Object {
      "deepArray": Array [
        Array [
          "item 1.1",
          "item 1.2",
        ],
        Array [
          "item 2.1",
          "item 2.2",
        ],
      ],
      "deepObject": Object {
        "shallowObject": Object {
          "key": "value",
        },
      },
      "key": 123,
      "shallowArray": Array [
        "item 1",
        "item 2",
      ],
      "shallowObject": Object {
        "key": "value",
      },
    },
  },
}
`;

exports[`Soya Config should return stringify config 1`] = `
Object {
  "soya.config.deepArray": Array [
    Array [
      "item 1.1",
      "item 1.2",
    ],
    Array [
      "item 2.1",
      "item 2.2",
    ],
  ],
  "soya.config.deepArray.0": Array [
    "item 1.1",
    "item 1.2",
  ],
  "soya.config.deepArray.0.0": "item 1.1",
  "soya.config.deepArray.0.1": "item 1.2",
  "soya.config.deepArray.1": Array [
    "item 2.1",
    "item 2.2",
  ],
  "soya.config.deepArray.1.0": "item 2.1",
  "soya.config.deepArray.1.1": "item 2.2",
  "soya.config.deepObject": Object {
    "shallowObject": Object {
      "key": "value",
    },
  },
  "soya.config.deepObject.shallowObject": Object {
    "key": "value",
  },
  "soya.config.deepObject.shallowObject.key": "value",
  "soya.config.key": 123,
  "soya.config.shallowArray": Array [
    "item 1",
    "item 2",
  ],
  "soya.config.shallowArray.0": "item 1",
  "soya.config.shallowArray.1": "item 2",
  "soya.config.shallowObject": Object {
    "key": "value",
  },
  "soya.config.shallowObject.key": "value",
}
`;
